2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.Linux.addin.xml,
	  MonoDevelop.Deployment.Linux.mdp,
	  gtk-gui/MonoDevelop.Deployment.Linux.DotDesktopViewWidget.cs,
	  Makefile.am: Migration to Mono.Addins.

2007-04-27  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.Linux/LinuxDeployData.cs: Added package name
	  property.
	* MonoDevelop.Deployment.Linux/LinuxDeployExtension.cs: Rename
	  app.desktop files to <package-name>.desktop when deploying.

2007-04-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.Linux.addin.xml: Register new project feature
	  editor. Place the .desktop editor before the default editor.
	* MonoDevelop.Deployment.Linux.mdp, Makefile.am: Added new file.
	* MonoDevelop.Deployment.Linux/DesktopEntry.cs: Write the [Desktop
	  Entry] group name when a new file is created.
	* MonoDevelop.Deployment.Linux/BasicOptionPanelWidget.cs,
	  MonoDevelop.Deployment.Linux/BasicOptionPanel.cs: Generate the
	  .desktop file if that option is selected.
	* MonoDevelop.Deployment.Linux/LinuxIntegrationProjectFeature.cs:
	  Implemented a project feature which allows setting unix integration
	  options.
	* gtk-gui/MonoDevelop.Deployment.Linux.DotDesktopViewWidget.cs,
	  gtk-gui/MonoDevelop.Deployment.Linux.MenuCategorySelectorDialog.cs,
	  gtk-gui/gui.stetic: Updated.

2007-04-24  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.Linux/BasicOptionPanelWidget.cs,
	  MonoDevelop.Deployment.Linux/LinuxDeployExtension.cs: Show library
	  options for exes compiled as dll.
	* gtk-gui/MonoDevelop.Deployment.Linux.DotDesktopViewWidget.cs,
	  gtk-gui/MonoDevelop.Deployment.Linux.MenuCategorySelectorDialog.cs:
	  Updated.

2007-04-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Deployment.Linux.mdp: Updated.
	* MonoDevelop.Deployment.Linux/LinuxDeployExtension.cs: Provide the
	  source project and a description for generated .pc and script
	  files.
