@@ -1,3 +1,8 @@
+2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Deployment.Linux.mdp, Makefile.am: Reference shared
+	  assemblies from the correct location.
+
 2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Deployment.Linux.addin.xml,
